<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.sqm</groupId>
    <artifactId>sqm-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>SQM (parent)</name>
    <url>https://github.com/icher-g/sqm</url>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/icher-g/sqm</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </distributionManagement>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.10.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>sqm-core</module>
        <module>sqm-control</module>
        <module>sqm-core-postgresql</module>
        <module>sqm-render</module>
        <module>sqm-parser</module>
        <module>sqm-json</module>
        <module>sqm-render-ansi</module>
        <module>sqm-parser-ansi</module>
        <module>sqm-validate</module>
        <module>sqm-parser-postgresql</module>
        <module>sqm-render-postgresql</module>
        <module>sqm-validate-postgresql</module>
        <module>sqm-catalog</module>
        <module>sqm-catalog-postgresql</module>
        <module>sqm-codegen</module>
        <module>sqm-codegen-maven-plugin</module>
        <module>sqm-it</module>
        <module>examples</module>
    </modules>
    <properties>
        <revision>0.3.0-SNAPSHOT</revision>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
        <spring.version>6.2.7</spring.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <!-- Surefire: unit tests -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
                <!-- Failsafe: integration tests -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.3</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
                <inherited>false</inherited>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.14</version>
                <executions>
                    <!-- Attach the agent so surefire tests record coverage in each child -->
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <!-- Write the agent options into THIS property -->
                            <includes>
                                <include>io/sqm/**</include>
                            </includes>
                        </configuration>
                    </execution>
                    <!-- Per-module HTML/XML reports (optional, but fine) -->
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
